# projeto_backtestv1

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_BOASPRATICAS.md  CHECKPOINT_PROJETO.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  GESTAO_ARQUIVOS_GRANDES.md  GUIA_RAPIDO_V1.1.md  GUIA_VALIDACAO_PIPELINES.md  MIGRAÇÃO_V1.1.md  ORGANIZACAO_ARQUIVOS.md  ORGANIZACAO_PROJETO.md  README.md  REFATORACAO_COMPLETA.md  REFATORACAO_SCRAPER_RESUMO.md  RESUMO_CORRECOES_PIPELINES.md  RESUMO_EXECUTIVO.md  ROADMAP.md  __version__.py  audit_report.json  boaspraticas.md  carteira_ideal.json  coverage.xml  crypto_portfolio_report.json  cvm_data_processor.py  dashboard_cache_manager.py  debug_v1.1.py  env.example.txt  gerar_relatorio_txt.py  get_market_prices.py  mapeamento_fundos.json  market_data_20250702_231843.json  market_data_20250702_232334.json  market_data_20250706_101707.json  portfolio_analysis_20250702_232235.json  portfolio_analysis_20250703_214853.json  portfolio_analysis_20250706_101731.json  (+30 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  status.yml
BInance/: crypto_portfolio_report.json  test_binance.py  test_cripto_portfolio.py
YahooFInance/: test_yfinance_api.py  teste_yf_externo.py  ver_historico.py
apis/: README_FUNDOS_SCRAPER.md  alternative_finance_api.py  binance_api.py  cvm_api.py  fundos_scraper.py  yahoo_api.py  yahoo_api_optimized.py
config/: config.yaml
core/: __init__.py  market_indices.py  market_indices_fixed.py  security_manager.py
dashboard/: MIGRACAO_SCRAPER.md  README.md  fund_cache_manager.py  portfolio_collector.py  portfolio_collector.txt  portfolio_collector_auto.py  portfolio_collector_fixed.py  portfolio_collector_v2.py  portfolio_collector_v3.py  requirements.txt
data/: audit_report.json  resultados_busca_fundos.json  resultados_busca_fundos_avancada.json  resultados_mapeamento_fundos.json
data/cache/funds/: cache_index.json  fund_cache.json
data/historical/: acoes_example.csv  criptos_example.csv  fundos_example.xlsx  renda_fixa_example.xlsx
docs/: MarketIndicesManager_README.md  SECURITY.md
docs/relatorios/: RELATORIO_DIA_07_07_2025.md  relatorio_data_manager_20250707_145026.txt  relatorio_data_manager_simples.txt
docs/testes/: test_data_manager_integrated.py  teste_mapeamento_fundos.py  teste_pratico_data_manager.py
examples/: portfolio_analysis_example.py  temporal_portfolio_analysis.py
relatorios/: README.md
relatorios/carteira_ideal/: relatorio_carteira_ideal_20250708_200940.txt
relatorios_cache/: dashboard_cache_manager_20250707_114842.html  relatorio_cache_manager_20250707_114512.html  relatorio_cache_manager_20250707_114512.txt  relatorio_executivo_20250707_114552.txt  teste_cvm_api_20250707_120354.json  teste_cvm_api_20250707_120354.txt  teste_cvm_api_v2_20250707_120535.json
relatorios_organizados/: gerar_relatorio_data_manager.py  organizacao_projeto_20250707_212204.json  relatorio_cache_manager.py  relatorio_executivo_cache.py
scripts/: organizar_projeto.py  organizar_relatorios.py  run_tests.py  security_audit.py  setup.py
scripts/data_download/: README.md  data_sources.json  download_large_files.py  test_download.py
sistema_obtencao_dados/: README.md  config.yaml  requirements.txt
sistema_obtencao_dados/core/: cache_manager.py  data_manager.py
sistema_obtencao_dados/examples/: test_cache_system.py
sistema_obtencao_dados/models/: data_models.py
sistema_obtencao_dados/providers/: fundos_provider.py  yahoo_finance_provider.py
testes_organizados/: test_cotacoes_reais_fundos.py
